# AI-Powered-Robotic-Arm-Control

./: .env.example  .gitignore  COMMIT_PREP.md  GITHUB_INFO.md  README.md
.github/: copilot-instructions.md
ros2aubo/src/aubo_ros2_driver/include/: aubo_ros2_driver.h
ros2aubo/src/aubo_ros2_moveit_config/: package.xml
src/ros2aubo/: README.md
src/ros2aubo/aubo_auto_control/: CMakeLists.txt  README.md  package.xml
src/ros2aubo/aubo_auto_control/launch/: auto_control.launch.py  auto_control_real.launch.py  full_auto_control.launch.py
src/ros2aubo/aubo_auto_control/src/: auto_move_controller.cpp  pose_publisher.cpp
src/ros2aubo/aubo_ros2_demo/: CMakeLists.txt
src/ros2aubo/aubo_ros2_demo/src/: moveit_demo.cpp
src/ros2aubo/aubo_ros2_driver/: CMakeLists.txt  package.xml
src/ros2aubo/aubo_ros2_moveit_config/config/: kinematics.yaml  ompl_planning.yaml
src/ros2aubo/aubo_ros2_moveit_config/launch/: aubo_moveit.launch.py  aubo_moveit_sim.launch.py
src/text2cmd/: MODULE_SUMMARY.md  README.md  __init__.py
src/text2cmd/config/: text2cmd_config.yaml
src/text2cmd/src/: text2cmd_parser.py
text2cmd/: demo_simple.py  examples.py  requirements.txt
text2cmd/src/: __init__.py  text2cmd_api.py
